syntax = "proto3"; // 版本
option java_outer_classname = "MsgPOJO";//生成的外部类名，同时也是文件名
// protobuf使用message管理数据
message Msg { // 会在MsgPOJO外部类中生成一个Msg内部类
    int64 msgId =1; // int32对应java中的int型，1表示属性序号，不是值
    int32 type =2; // 消息类型
    int32 index =3; // 消息index
    string projectId =4; // projectId
    string content =5; // 内容
    int32 port =6; // 正在连接的客户端的server端口
    bool isLeader = 7; // 对方是否是leader
    int32 ElectionId =8; // 选举的轮次
    int32 voteResult =9; // 投票结果，1：通过，0：不通过
    bytes indexMapLog = 10;
    bytes msgMapLog = 11;
    map<string, int32> msgMap = 12; // 同步日志用，key为projectId，value为commitedIndex
    map<string, int32> logCopyIndexMap = 13; // key为projectId，value为各projectId日志中需要传输的增量的字节数
    bytes logCopyBytes = 14; // 所有projectId需要传输的增加的字节数组
    int32 term =15;
    bool isOldLeader = 16; // 对方是否是老leader
}